--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,7 +19,8 @@
     padding: 5em;
     display: flex;
     flex-wrap: wrap;
-    align-content: space-between;
+    justify-content: space-around;
+    margin: 10px;
 }
 
 .card {
