--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -70,7 +70,7 @@
     padding: 5em;
     display: flex;
     flex-wrap: wrap;
-    align-content: space-between;
+    justify-content: space-around;
 }
 
 .card {
