--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,64 +1,57 @@
-@import url("https://fonts.googleapis.com/css2?family=Red+Hat+Mono:ital,wght@1,300&family=Roboto+Mono:wght@200&family=Roboto:ital,wght@1,100&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Happy+Monkey&family=Hurricane&family=Montserrat:wght@200&family=Palette+Mosaic&family=Thasadith:ital@1&family=Work+Sans:wght@200&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Red+Hat+Mono:ital,wght@1,300&family=Roboto+Mono:wght@200&family=Roboto:ital,wght@1,100&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Happy+Monkey&family=Hurricane&family=Montserrat:wght@200&family=Palette+Mosaic&family=Thasadith:ital@1&family=Work+Sans:wght@200&display=swap');
 @import "https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css";
 /* HOME PAGE STYLES START */
 
 :root {
-  --white-color: #ffffff;
-  --black-color: #000000;
-  --yellow-color: #f6ea28;
-  --dblue-color: #0041d8;
-  --purple-color: #883cd5;
-  --pink-color: #f140b6;
-  --green-color: #18d545;
-}
+    --white-color: #FFFFFF;
+    --black-color: #000000;
+    --yellow-color: #F6EA28;
+    --dblue-color: #0041D8;
+    --purple-color: #883CD5;
+    --pink-color: #F140B6;
+    --green-color: #18D545;
+  }
 
-*,
-*::before *::after {
-  box-sizing: border-box;
+*, 
+*::before
+*::after {
+    box-sizing: border-box;
 }
 
 #happy {
-  background-color: var(--yellow-color);
-  font-family: "Happy Monkey", cursive;
+    background-color: var(--yellow-color);
+    font-family: 'Happy Monkey', cursive;
 }
 
 #sad {
-  background-color: var(--dblue-color);
-  font-family: "Thasadith", sans-serif;
+    background-color: var(--dblue-color);
+    font-family: 'Thasadith', sans-serif;
 }
 
 #confident {
-  background-color: var(--pink-color);
-  font-family: "Montserrat", sans-serif;
+    background-color: var(--pink-color);
+    font-family: 'Montserrat', sans-serif;
 }
 
 #calm {
-  background-color: var(--green-color);
-  font-family: "Hurricane", cursive;
+    background-color: var(--green-color);
+    font-family: 'Hurricane', cursive;
 }
 
 #amped {
-  background-color: var(--purple-color);
-  font-family: "Palette Mosaic", cursive;
+    background-color: var(--purple-color);
+    font-family: 'Palette Mosaic', cursive;
 }
 
 #random {
-  background-color: black;
+    background-color: black;
 }
 #home {
   text-align: center;
 }
 
 #heading {
-<<<<<<< HEAD
-  color: #000000;
-  font-family: "Helvetica Neue", sans-serif;
-  font-size: 150px;
-  font-weight: bold;
-  letter-spacing: -1px;
-  line-height: 1;
-=======
     color: #000000;
     font-weight: bold;
     letter-spacing: -1px;
@@ -70,7 +63,6 @@ h1 {
     border-bottom: 3px solid black;
     margin: 25px;
     padding: 50px;
->>>>>>> 5f6c7e1c758c0b4dedd8689fa234a70496645659
 }
 
 .button {
@@ -111,41 +103,6 @@ h1 {
 }
 
 /* HOME PAGE STYLES END */
-<<<<<<< HEAD
-:root {
-  --white-color: #ffffff;
-  --black-color: #000000;
-  --yellow-color: #f6ea28;
-  --dblue-color: #0041d8;
-  --purple-color: #883cd5;
-  --pink-color: #f140b6;
-  --green-color: #18d545;
-}
-
-*,
-*::before *::after {
-  box-sizing: border-box;
-}
-
-.card-container {
-  line-height: 1.5;
-  padding: 5em;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-around;
-}
-
-.card {
-  display: grid;
-  color: var(--white-color);
-  background-image: url(../images/sample\ background.webp);
-  background-size: cover;
-  padding: 6rem 0 0;
-  max-width: 35ch;
-  border-radius: 0.5rem;
-  overflow: hidden;
-  border: 3px solid black;
-=======
 
 body {
     font-family: 'Red Hat Mono', monospace;
@@ -163,7 +120,7 @@ body {
 }
 
 .card {
-    position: relative;
+    position: grid;
     font-family: 'Roboto Mono', monospace;
     display: grid;
     color: var(--white-color);
@@ -175,7 +132,6 @@ body {
     overflow: hidden;
     border: 3px solid black;
     margin: 25px;
->>>>>>> 5f6c7e1c758c0b4dedd8689fa234a70496645659
 
   transition: transform 500ms ease;
 }
